fix misaligned frames

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -55,18 +55,18 @@ input {
 
 .sidebar {
     width: 20%;
+}
+
+.viewer-container {
+    width: 80%;
+}
+
+.sidebar, .viewer-container {
     display: flex;
     flex-direction: column;
     border: 1px solid grey;
     padding: 1px;
     margin: 2px;
-}
-
-.viewer-container {
-    width: 80%;
-    display: flex;
-    flex-direction: column;
-    border: 1px solid grey;
 }
 
 .collection-option {
